# climate-quest

./: .gitignore  README.md  docker-compose.yml
climate-quest-backend/: Dockerfile  choropleth.py  country_iso_codes.json  main.py  models.py  packing-list.txt  packing_list.json  pyproject.toml  requirements.txt  response_payload.json  test.py  travel_utils.py  tripadvisor_webscraper.py  your_weather_data.csv
climate-quest-frontend/: .gitignore  Dockerfile  package-lock.json  package.json
climate-quest-frontend/src/: App.css  App.js  locations.json
